[gd_scene load_steps=9 format=2]

[ext_resource path="res://JoinServer/JoinServer.gd" type="Script" id=1]
[ext_resource path="res://MenuStyle.tres" type="Theme" id=2]
[ext_resource path="res://JoinServer/LoadingJar_03.png" type="Texture" id=3]
[ext_resource path="res://JoinServer/LoadingJar_02.png" type="Texture" id=4]
[ext_resource path="res://JoinServer/LoadingJar_01.png" type="Texture" id=5]
[ext_resource path="res://JoinServer/LoadingJar_04.png" type="Texture" id=6]
[ext_resource path="res://UI/IPEntryControl.tscn" type="PackedScene" id=7]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 5 ), ExtResource( 4 ), ExtResource( 3 ), ExtResource( 6 ) ],
"loop": true,
"name": "default",
"speed": 1.5
} ]

[node name="JoinServer" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 2.0
margin_right = 2.0
theme = ExtResource( 2 )
script = ExtResource( 1 )

[node name="HostIpLabel" type="Label" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -331.0
margin_top = 111.0
margin_right = 306.0
margin_bottom = 150.0
text = "Please enter an IP found on the host device"
align = 1

[node name="JoinButton" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -52.0
margin_top = 156.0
margin_right = 11.0
margin_bottom = 202.0
text = "Join"

[node name="HelpButton" type="Button" parent="."]
margin_left = 30.0
margin_top = 730.0
margin_right = 60.0
margin_bottom = 760.0
text = "?"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HelpButtonLabel" type="Label" parent="HelpButton"]
margin_left = 37.0
margin_top = 8.0
margin_right = 77.0
margin_bottom = 22.0
text = "Need Help?"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HelpPopup" type="WindowDialog" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -320.0
margin_top = -232.5
margin_right = 320.0
margin_bottom = 232.5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HelpText" type="RichTextLabel" parent="HelpPopup"]
margin_right = 640.0
margin_bottom = 307.0
text = "The host IP address is found on the device where the server was created. If you cannot find an IP address on any device, please create a server on another device."

[node name="HideHelpButton" type="Button" parent="HelpPopup"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -41.0
margin_top = -16.0
margin_right = 41.0
margin_bottom = 39.0
text = "Okay"

[node name="CannnotConnectPopup" type="WindowDialog" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -320.0
margin_top = -232.5
margin_right = 320.0
margin_bottom = 232.5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ErrorText" type="RichTextLabel" parent="CannnotConnectPopup"]
margin_right = 640.0
margin_bottom = 153.0
text = "The IP address entered was not found or was incorrect. Please go back and try again with a new IP address."

[node name="HideErrorButton" type="Button" parent="CannnotConnectPopup"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -41.0
margin_top = -27.5
margin_right = 41.0
margin_bottom = 27.5
text = "Okay"

[node name="GoBackButton" type="Button" parent="."]
anchor_left = 0.533
anchor_top = 0.656
anchor_right = 0.533
anchor_bottom = 0.656
margin_left = -116.24
margin_top = 106.2
margin_right = -7.24005
margin_bottom = 152.2
text = "Go Back"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ConnectingAnimation" type="AnimatedSprite" parent="."]
visible = false
position = Vector2( 620, 395 )
frames = SubResource( 1 )
frame = 2
playing = true

[node name="ConnectingLabel" type="Label" parent="."]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -110.0
margin_top = 105.0
margin_right = 74.0
margin_bottom = 144.0
text = "Connecting..."
align = 1

[node name="IPEntryControl" parent="." instance=ExtResource( 7 )]
anchor_right = 0.212
anchor_bottom = 0.38
margin_left = 488.0
margin_top = 183.0
margin_right = 482.88
margin_bottom = 184.6

[connection signal="pressed" from="JoinButton" to="." method="_on_JoinButton_pressed"]
[connection signal="pressed" from="HelpButton" to="." method="_on_HelpButton_pressed"]
[connection signal="pressed" from="HelpPopup/HideHelpButton" to="." method="_on_HideHelpButton_pressed"]
[connection signal="pressed" from="CannnotConnectPopup/HideErrorButton" to="." method="_on_HideErrorButton_pressed"]
[connection signal="pressed" from="GoBackButton" to="." method="_on_GoBackButton_pressed"]
[connection signal="button_clicked" from="IPEntryControl" to="." method="_on_IPEntryControl_button_clicked"]
